# dream-ticket

./: .flake8  .gitignore  .pylintrc  alembic.ini  log_config.yaml  pyproject.toml  run_alembic.sh  run_lint.sh  settings.yaml.example  start.sh
.github/workflows/: python.yaml
alembic/: env.py
alembic/versions/: 479e3415f1a2_added_ticket_service.py  b36625a26b41_nullable_false_in_start_date_and_end_.py  ba26afdd4b04_add_timezone_in_ticket_datetime_fields.py  fc8193268f20_added_start_date_and_end_date.py
env/: settings.py
tests/: __init__.py
tests/env/: test_settings.py
tests/models/: test_filter.py
ticket/: __init__.py  main.py
ticket/env/: settings.py
ticket/extensions/: auth_extension.py  db_session.py
ticket/middlewares/: db_session.py  timing.py
ticket/models/: __init__.py  filter.py  models.py  order.py  ticket.py
ticket/schemas/: __init__.py  mutation.py  order.py  order_func.py  query.py  schemas.py  ticket.py
ticket/services/: db_loader.py  engine.py  odoo.py
