[tool.poetry]
name = "ticket"
version = "0.1.0"
description = ""
authors = ["Lwin Maung Maung <lwinmaungmaung.ytu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.27.1"
starlette = "^0.37.1"
strawberry-graphql = {extras = ["debug-server"], version = "^0.219.2"}
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
pydantic = "^2.6.2"
aiohttp = "^3.9.3"
user-go = { git = "https://github.com/lwinmgmg/grpc_m.git", subdirectory = "user_go", tag = "v0.1.2" }


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
